--- a/css/style.css
+++ b/css/style.css
@@ -206,17 +206,26 @@ p{
 .footer{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    border-top: 2px solid #ECECEC;
 }
 .footer .logo a{
-    font-size: 17px;
+    font-size: 12px;
     text-transform: uppercase;
 }
 .footer .back{
     text-transform: uppercase;
+    font-size: 12px;
 }
 @media(max-width:500px){
     .footer .menu{
         display: none;
+    }
+    footer .back{
+        font-size: 17px;
+    }
+    .footer .logo a{
+        font-size: 12px;
     }
 }
 @media(min-width:500px){
