--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
 html{
     box-sizing: border-box;
     font-size: 62.5%;
@@ -10,7 +11,7 @@ html{
 body{
     font-size: 1.6rem;
     background-color: #fafafa;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Karla", sans-serif;
     line-height: 1.6;
 }
 img{
